# PickLLM

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-hf.yml
data/: lmarena_image-edit.csv  lmarena_image-edit_with_pricing.csv  lmarena_image.csv  lmarena_image_with_pricing.csv  lmarena_text.csv  lmarena_text_with_pricing_or.csv  lmarena_vision.csv  lmarena_vision_with_pricing_or.csv  lmarena_webdev.csv  lmarena_webdev_with_pricing_or.csv  metadata_20250804.csv
databag-datafactory-1984/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
databag-datafactory-1984/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
dataset/: testdataset_input.json  testdataset_output.json
factory/: databag-datafactory-1984.json
linkedService/: AzureBlobStorage1.json
outputs/: README.md
pipeline/: demopipeline1.json
src/: add_price.py  collect_leaderboard_data.py  match_openrouter.py  rag.py  recommendation_engine.py  recommendation_explainer.py  use_case_helper.py
templates/: _macros.html  base.html  landing.html  questionnaire.html  results.html
tests/: README.md  __init__.py  test_rag.py  test_recommendation_explainer.py  test_use_case_helper.py
