[project]
name = "pickllm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
    "pandas>=2.3.0",
    "plotly<=5.24.1",
    "openai>=1.0.0",
    "requests>=2.32.5",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "numpy>=2.3.3",
    "minsearch>=0.0.7",
]
